Adds jumbotron to introduce purpose of site.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,38 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <a class="navbar-brand" href="/">
+                <img src="assets/team-logo.png" alt="team-logo">
+            </a>
+            <div class="navbar-nav ml-auto text-uppercase">
+                <a class="nav-item nav-link" href="#">Team Members</a>
+                <a class="nav-item nav-link" href="#">Team Expectations</a>
+                <div class="nav-item dropdown d-flex-inline">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown">
+                        Deliverables
+                    </a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Personas & User Stories</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="jumbotron container mt-3 text-center d-flex flex-column">
+        <h1 class="display-4">Welcome to Team Work</h1>
+        <p class="col-9 align-self-center">
+            A skillful group of CSCC01 students building an MVP
+            that will replace togotoronto.com and showcase the exquisite food of Scarborough while
+            giving chefs and owners the opportunity to share their story.
+        </p>
+    </div>
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
