--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <div class="collapse navbar-collapse container" id="navbarTogglerDemo01">
             <a class="navbar-brand" href="/">
                 <img src="assets/team-logo.png" alt="team-logo">
             </a>
             <div class="navbar-nav ml-auto text-uppercase">
-                <a class="nav-item nav-link" href="#">Team Members</a>
+                <a class="nav-item nav-link" href="#">About Us</a>
                 <a class="nav-item nav-link" href="#">Team Expectations</a>
-                <div class="nav-item dropdown d-flex-inline">
+                <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown">
                         Deliverables
                     </a>
-                    <div class="dropdown-menu">
+                    <div class="dropdown-menu dropdown-menu-right">
                         <a class="dropdown-item" href="#">Personas & User Stories</a>
                     </div>
                 </div>
