Adds project purpose, goals, strengths.

--- a/index.html
+++ b/index.html
@@ -36,12 +36,65 @@
     </nav>
     <div class="jumbotron container mt-3 text-center d-flex flex-column">
         <h1 class="display-4">Welcome to Team Work</h1>
-        <p class="col-9 align-self-center">
+        <p class="col-8 align-self-center">
             A skillful group of CSCC01 students building an MVP
-            that will replace togotoronto.com and showcase the exquisite food of Scarborough while
-            giving chefs and owners the opportunity to share their story.
+            that will replace togotoronto.com and showcase local restaurants and
+            restaurant owners in Scarborough.
         </p>
     </div>
+    <section class="container px-0 mb-4">
+        <article class="card">
+            <h5 class="card-header text-center">The Problem</h5>
+            <ul class="card-body pl-4">
+                <li class="card-text">
+                    Scarborough food can only say so much alone. Chefs and owners have story to tell, but who is
+                    listening?
+                </li>
+                <li class="card-text">
+                    Downtown and uptown Toronto dining get all the attention, including
+                    the togotoronto.com website
+                </li>
+                <li class="card-text">
+                    Scarborough food is often lower
+                    margin and paying delivery services
+                    30% is not sustainable, especially
+                    during the pandemic
+                </li>
+            </ul>
+        </article>
+    </section>
+    <section class="d-flex container px-0 mb-4">
+        <article class="card w-50 mr-5">
+            <h5 class="card-header">Goals</h5>
+            <ul class="card-body pl-4">
+                <li class="card-text">
+                    Create an outstanding platform where restaurant owners and chefs of
+                    Scarborough can tell their story and inspire people to try their food
+                </li>
+                <li class="card-text">
+                    Promote local restaurants in Scarborough and improve the engagement and
+                    number of patrons accessing local food.
+                </li>
+                <li class="card-text">
+                    Hone our development skills while successfully follow current best software engineering
+                    practices
+                </li>
+            </ul>
+        </article>
+        <article class="card w-50 ml-5">
+            <h5 class="card-header">Strengths</h5>
+            <ul class="card-body pl-4">
+                <li class="card-text">
+                    Team members have a personal connection to each other and this will greatly
+                    impact how well our team does
+                </li>
+                <li class="card-text">
+                    As our team name suggests, we have excellent teamwork skills
+                </li>
+            </ul>
+        </article>
+    </section>
+
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
