Fixes wording. Removes card component for the problem, goals and strengths.

--- a/index.html
+++ b/index.html
@@ -43,53 +43,98 @@
         </p>
     </div>
     <section class="container px-0 mb-4">
-        <article class="card">
-            <h5 class="card-header text-center">The Problem</h5>
-            <ul class="card-body pl-4">
-                <li class="card-text">
+        <div class="alert alert-danger" role="alert">
+            <h4 class="alert-heading text-center bold font-weight-bolder">The Problem</h4>
+            <hr>
+            <ul class="l-4">
+                <li class="">
                     Scarborough food can only say so much alone. Chefs and owners have story to tell, but who is
                     listening?
                 </li>
-                <li class="card-text">
+                <li class="">
                     Downtown and uptown Toronto dining get all the attention, including
                     the togotoronto.com website
                 </li>
-                <li class="card-text">
+                <li class="">
                     Scarborough food is often lower
                     margin and paying delivery services
                     30% is not sustainable, especially
                     during the pandemic
                 </li>
             </ul>
-        </article>
+        </div>
     </section>
     <section class="d-flex container px-0 mb-4">
-        <article class="card w-50 mr-5">
-            <h5 class="card-header">Goals</h5>
-            <ul class="card-body pl-4">
-                <li class="card-text">
+        <article class="w-50 mr-5">
+            <h5 class="">Goals</h5>
+            <ul class="pl-4">
+                <li class="">
                     Create an outstanding platform where restaurant owners and chefs of
                     Scarborough can tell their story and inspire people to try their food
                 </li>
-                <li class="card-text">
+                <li class="">
                     Promote local restaurants in Scarborough and improve the engagement and
                     number of patrons accessing local food.
                 </li>
-                <li class="card-text">
+                <li class="">
                     Hone our development skills while successfully follow current best software engineering
                     practices
                 </li>
             </ul>
         </article>
-        <article class="card w-50 ml-5">
-            <h5 class="card-header">Strengths</h5>
-            <ul class="card-body pl-4">
-                <li class="card-text">
-                    Team members have a personal connection to each other and this will greatly
-                    impact how well our team does
+        <article class="w-50 ml-5">
+            <h5 class="">Strengths</h5>
+            <ul class="pl-4">
+                <li class="">
+                    As our team name suggests, we have excellent <span class="font-weight-bolder">teamwork</span> skills
+                    developed
+                    from working on past school projects together
                 </li>
-                <li class="card-text">
-                    As our team name suggests, we have excellent teamwork skills
+                <li class="">
+                    We have exceptional skills in web development developed from
+                    past coop jobs
+                </li>
+            </ul>
+            <h6>Technical Skills</h6>
+            <ul class="pl-4">
+                <li class="">
+                    Java
+                </li>
+                <li class="">
+                    Python
+                </li>
+                <li class="">
+                    C++
+                </li>
+                <li class="">
+                    JavaScript
+                </li>
+                <li class="">
+                    MongoDB
+                </li>
+                <li class="">
+                    Angular
+                </li>
+                <li class="">
+                    Express
+                </li>
+                <li class="">
+                    Node.js
+                </li>
+                <li class="">
+                    C
+                </li>
+                <li class="">
+                    Bootstrap
+                </li>
+                <li class="">
+                    Go
+                </li>
+                <li class="">
+                    React
+                </li>
+                <li class="">
+                    HTML/CSS
                 </li>
             </ul>
         </article>
