Organizes technical skills in terms of languages, front end, back end.

--- a/index.html
+++ b/index.html
@@ -43,104 +43,160 @@
         </p>
     </div>
     <section class="container px-0 mb-4">
-        <div class="alert alert-danger" role="alert">
+        <article class="alert alert-danger" role="alert">
             <h4 class="alert-heading text-center bold font-weight-bolder">The Problem</h4>
             <hr>
             <ul class="l-4">
-                <li class="">
+                <li>
                     Scarborough food can only say so much alone. Chefs and owners have story to tell, but who is
                     listening?
                 </li>
-                <li class="">
+                <li>
                     Downtown and uptown Toronto dining get all the attention, including
                     the togotoronto.com website
                 </li>
-                <li class="">
+                <li>
                     Scarborough food is often lower
                     margin and paying delivery services
                     30% is not sustainable, especially
                     during the pandemic
                 </li>
             </ul>
-        </div>
+        </article>
     </section>
     <section class="d-flex container px-0 mb-4">
-        <article class="w-50 mr-5">
-            <h5 class="">Goals</h5>
+        <article class="border border-black rounded p-3 w-75">
+            <h5 class="text-center">Project Requirements</h5>
             <ul class="pl-4">
-                <li class="">
-                    Create an outstanding platform where restaurant owners and chefs of
-                    Scarborough can tell their story and inspire people to try their food
+                <li>
+                    Search engine allowing searches by type of cuisine, location, affordability, ratings and
+                    other categories
                 </li>
-                <li class="">
-                    Promote local restaurants in Scarborough and improve the engagement and
-                    number of patrons accessing local food.
+                <li>
+                    Embed video clips of chefs discussing their menus and providing cooking tips and
+                    stories of how recipes were developed, where and how certain ingredients are
+                    produced and other interesting food stories
                 </li>
-                <li class="">
-                    Hone our development skills while successfully follow current best software engineering
-                    practices
+                <li>
+                    Easy to navigate for patrons, and easy to access food (ordering, transaction engine)
+                    and to easily connect this activity to the restaurants themselves
+                </li>
+                <li>
+                    Allow for the creation of digital social networks, building promotional capacity, and a
+                    means to connect with the community of restaurants and the people that frequent
+                    them
+                </li>
+                <li>
+                    promotions and community element may be gamified to increase engagement with
+                    target audiences
+                </li>
+                <li>
+                    Analytics engine providing insights on consumer behavior
+                </li>
+                <li>
+                    Ensure the platform is easy to use so non-technologically sophisticated audiences
+                    can update content
+                </li>
+                <li>
+                    All software developed would be open source, provided as part of a community
+                    initiative
                 </li>
             </ul>
         </article>
-        <article class="w-50 ml-5">
-            <h5 class="">Strengths</h5>
-            <ul class="pl-4">
-                <li class="">
-                    As our team name suggests, we have excellent <span class="font-weight-bolder">teamwork</span> skills
-                    developed
-                    from working on past school projects together
-                </li>
-                <li class="">
-                    We have exceptional skills in web development developed from
-                    past coop jobs
-                </li>
-            </ul>
-            <h6>Technical Skills</h6>
-            <ul class="pl-4">
-                <li class="">
-                    Java
-                </li>
-                <li class="">
-                    Python
-                </li>
-                <li class="">
-                    C++
-                </li>
-                <li class="">
-                    JavaScript
-                </li>
-                <li class="">
-                    MongoDB
-                </li>
-                <li class="">
-                    Angular
-                </li>
-                <li class="">
-                    Express
-                </li>
-                <li class="">
-                    Node.js
-                </li>
-                <li class="">
-                    C
-                </li>
-                <li class="">
-                    Bootstrap
-                </li>
-                <li class="">
-                    Go
-                </li>
-                <li class="">
-                    React
-                </li>
-                <li class="">
-                    HTML/CSS
-                </li>
-            </ul>
+        <article class="ml-2">
+            <section class="card mb-3">
+                <h5 class="card-header text-center">Goals</h5>
+                <ul class="card-body pl-4">
+                    <li>
+                        Create an outstanding platform where restaurant owners and chefs of
+                        Scarborough can tell their story and inspire people to try their food
+                    </li>
+                    <li>
+                        Promote local restaurants in Scarborough and improve the engagement and
+                        number of patrons accessing local food.
+                    </li>
+                    <li>
+                        Hone our development skills while successfully follow current best software engineering
+                        practices
+                    </li>
+                </ul>
+            </section>
+            <section class="card">
+                <h5 class="card-header text-center">Strengths</h5>
+                <ul class="cart-body pl-4">
+                    <li>
+                        As our team name suggests, we have excellent <span class="font-weight-bolder">teamwork</span>
+                        skills
+                        developed
+                        from working on past school projects together
+                    </li>
+                    <li>
+                        We have exceptional skills in web development developed from
+                        past coop jobs
+                    </li>
+                </ul>
+                <h5 class="text-center">Technical Skills</h5>
+                <div class="d-flex justify-content-between px-4">
+                    <div>
+                        <h6>Languages</h6>
+                        <ul class="pl-3">
+                            <li>
+                                Java
+                            </li>
+                            <li>
+                                Python
+                            </li>
+                            <li>
+                                C++
+                            </li>
+                            <li>
+                                C
+                            </li>
+                            <li>
+                                Go
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h5>Front end</h5>
+                        <ul class="pl-3">
+                            <li>
+                                Vanilla JavaScript
+                            </li>
+                            <li>
+                                Angular
+                            </li>
+                            <li>
+                                Bootstrap
+                            </li>
+
+                            <li>
+                                React
+                            </li>
+                            <li>
+                                HTML/CSS
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h5>Back end</h5>
+                        <ul class="pl-3">
+                            <li>
+                                MongoDB
+                            </li>
+
+                            <li>
+                                Express
+                            </li>
+                            <li>
+                                Node.js
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
         </article>
     </section>
-
-
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
