--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             restaurant owners in Scarborough.
         </p>
     </div>
-    <section class="container px-0 mb-4">
+    <section class="container px-0 my-4">
         <article class="alert alert-danger" role="alert">
             <h4 class="alert-heading text-center bold font-weight-bolder">The Problem</h4>
             <hr>
@@ -103,8 +103,8 @@
                 </li>
             </ul>
         </article>
-        <article class="ml-2">
-            <section class="card mb-3">
+        <article class="ml-4">
+            <section class="card mb-4">
                 <h5 class="card-header text-center">Goals</h5>
                 <ul class="card-body pl-4">
                     <li>
@@ -123,7 +123,7 @@
             </section>
             <section class="card">
                 <h5 class="card-header text-center">Strengths</h5>
-                <ul class="cart-body pl-4">
+                <ul class="card-body pl-4 mb-0">
                     <li>
                         As our team name suggests, we have excellent <span class="font-weight-bolder">teamwork</span>
                         skills
@@ -135,7 +135,7 @@
                         past coop jobs
                     </li>
                 </ul>
-                <h5 class="text-center">Technical Skills</h5>
+                <h5 class="pl-4">Technical Expertise</h5>
                 <div class="d-flex justify-content-between px-4">
                     <div>
                         <h6>Languages</h6>
@@ -158,7 +158,7 @@
                         </ul>
                     </div>
                     <div>
-                        <h5>Front end</h5>
+                        <h6>Front end</h6>
                         <ul class="pl-3">
                             <li>
                                 Vanilla JavaScript
@@ -179,7 +179,7 @@
                         </ul>
                     </div>
                     <div>
-                        <h5>Back end</h5>
+                        <h6>Back end</h6>
                         <ul class="pl-3">
                             <li>
                                 MongoDB
