--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         </ul>
                     </div>
                     <div>
-                        <h6>Front end</h6>
+                        <h6>Front End</h6>
                         <ul class="pl-3">
                             <li>
                                 Vanilla JavaScript
@@ -179,7 +179,7 @@
                         </ul>
                     </div>
                     <div>
-                        <h6>Back end</h6>
+                        <h6>Back End</h6>
                         <ul class="pl-3">
                             <li>
                                 MongoDB
