Makes site responsive for md to lg screens.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <article class="alert alert-danger" role="alert">
             <h4 class="alert-heading text-center bold font-weight-bolder">The Problem</h4>
             <hr>
-            <ul class="l-4">
+            <ul class="pl-4">
                 <li>
                     Scarborough food can only say so much alone. Chefs and owners have story to tell, but who is
                     listening?
@@ -64,46 +64,8 @@
             </ul>
         </article>
     </section>
-    <section class="d-flex container px-0 mb-4">
-        <article class="border border-black rounded p-3 w-75">
-            <h5 class="text-center">Project Requirements</h5>
-            <ul class="pl-4">
-                <li>
-                    Search engine allowing searches by type of cuisine, location, affordability, ratings and
-                    other categories
-                </li>
-                <li>
-                    Embed video clips of chefs discussing their menus and providing cooking tips and
-                    stories of how recipes were developed, where and how certain ingredients are
-                    produced and other interesting food stories
-                </li>
-                <li>
-                    Easy to navigate for patrons, and easy to access food (ordering, transaction engine)
-                    and to easily connect this activity to the restaurants themselves
-                </li>
-                <li>
-                    Allow for the creation of digital social networks, building promotional capacity, and a
-                    means to connect with the community of restaurants and the people that frequent
-                    them
-                </li>
-                <li>
-                    promotions and community element may be gamified to increase engagement with
-                    target audiences
-                </li>
-                <li>
-                    Analytics engine providing insights on consumer behavior
-                </li>
-                <li>
-                    Ensure the platform is easy to use so non-technologically sophisticated audiences
-                    can update content
-                </li>
-                <li>
-                    All software developed would be open source, provided as part of a community
-                    initiative
-                </li>
-            </ul>
-        </article>
-        <article class="ml-4">
+    <section class="px-0 mb-4 container d-flex flex-column flex-md-row">
+        <article>
             <section class="card mb-4">
                 <h5 class="card-header text-center">Goals</h5>
                 <ul class="card-body pl-4">
@@ -196,7 +158,46 @@
                 </div>
             </section>
         </article>
+        <article class="border border-black rounded p-3 ml-md-4 mt-4 mt-md-0">
+            <h5 class="text-center">Project Requirements</h5>
+            <ul class="pl-4">
+                <li>
+                    Search engine allowing searches by type of cuisine, location, affordability, ratings and
+                    other categories
+                </li>
+                <li>
+                    Embed video clips of chefs discussing their menus and providing cooking tips and
+                    stories of how recipes were developed, where and how certain ingredients are
+                    produced and other interesting food stories
+                </li>
+                <li>
+                    Easy to navigate for patrons, and easy to access food (ordering, transaction engine)
+                    and to easily connect this activity to the restaurants themselves
+                </li>
+                <li>
+                    Allow for the creation of digital social networks, building promotional capacity, and a
+                    means to connect with the community of restaurants and the people that frequent
+                    them
+                </li>
+                <li>
+                    promotions and community element may be gamified to increase engagement with
+                    target audiences
+                </li>
+                <li>
+                    Analytics engine providing insights on consumer behavior
+                </li>
+                <li>
+                    Ensure the platform is easy to use so non-technologically sophisticated audiences
+                    can update content
+                </li>
+                <li>
+                    All software developed would be open source, provided as part of a community
+                    initiative
+                </li>
+            </ul>
+        </article>
     </section>
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
