Fixes bug where on smaller screens, all components below navbar had 0 padding. Makes navbar-toggler and navbar-brand on same line in smaller screens.

--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
             </div>
         </div>
     </nav>
-    <div class="jumbotron container mt-3 text-center d-flex flex-column">
-        <h1 class="display-4">Welcome to Team Work</h1>
-        <p class="col-8 align-self-center">
-            A skillful group of CSCC01 students building an MVP
-            that will replace togotoronto.com and showcase local restaurants and
-            restaurant owners in Scarborough.
-        </p>
-    </div>
-    <section class="container px-0 my-4">
+    <header class="container">
+        <div class="jumbotron mt-3 text-center d-flex flex-column">
+            <h1 class="display-4">Welcome to Team Work</h1>
+            <p class="col-12 col-lg-8 align-self-center">
+                A skillful group of CSCC01 students building an MVP
+                that will replace togotoronto.com and showcase local restaurants and
+                restaurant owners in Scarborough.
+            </p>
+        </div>
+    </header>
+    <section class="container my-4">
         <article class="alert alert-danger" role="alert">
             <h4 class="alert-heading text-center bold font-weight-bolder">The Problem</h4>
             <hr>
@@ -67,7 +69,7 @@
             </ul>
         </article>
     </section>
-    <section class="px-0 mb-4 container d-flex flex-column flex-md-row">
+    <section class="mb-4 container d-flex flex-column flex-md-row">
         <article>
             <section class="card mb-4">
                 <h5 class="card-header text-center">Goals</h5>
@@ -101,7 +103,7 @@
                     </li>
                 </ul>
                 <h5 class="pl-4">Technical Expertise</h5>
-                <div class="d-flex justify-content-between px-4">
+                <div class="d-flex flex-column flex-sm-row justify-content-between px-4">
                     <div>
                         <h6>Languages</h6>
                         <ul class="pl-3">
