Added Project Plan to Deliverables menu

--- a/about-us.html
+++ b/about-us.html
@@ -30,6 +30,7 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right">
                         <a class="dropdown-item" href="#">Personas & User Stories</a>
+                        <a class="dropdown-item" href="#">Project Plan</a>
                     </div>
                 </div>
             </div>
