Complete Team Expectations page.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             </button>
             <div class="collapse navbar-collapse text-center" id="navbarTogglerDemo01">
                 <div class="navbar-nav ml-auto text-uppercase">
+                    <a class="nav-item nav-link" href="index.html">Home</a>
                     <a class="nav-item nav-link" href="about-us.html">About Us</a>
-                    <a class="nav-item nav-link" href="#">Team Expectations</a>
+                    <a class="nav-item nav-link" href="team-expectations.html">Team Expectations</a>
                     <div class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown">
