--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-right">
                             <a class="dropdown-item" href="#">Personas & User Stories</a>
-                            <a class="dropdown-item" href="#">Project Plan</a>
+                            <a class="dropdown-item" href="project-plan.html">Project Plan</a>
                         </div>
                     </div>
                 </div>
