--- a/project-plan.html
+++ b/project-plan.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse text-center" id="navbarTogglerDemo01">
                 <div class="navbar-nav ml-auto text-uppercase">
                     <a class="nav-item nav-link" href="about-us.html">About Us</a>
-                    <a class="nav-item nav-link" href="#">Team Expectations</a>
+                    <a class="nav-item nav-link" href="team-expectations.html">Team Expectations</a>
                     <div class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown">
@@ -31,7 +31,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-right">
                             <a class="dropdown-item" href="#">Personas & User Stories</a>
-                            <a class="dropdown-item" href="#">Project Plan</a>
+                            <a class="dropdown-item" href="project-plan.html">Project Plan</a>
                         </div>
                     </div>
                 </div>
