Fixed bugs with navigation bar

--- a/team-expectations.html
+++ b/team-expectations.html
@@ -32,7 +32,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-right">
                             <a class="dropdown-item" href="#">Personas & User Stories</a>
-                            <a class="dropdown-item" href="#">Project Plan</a>
+                            <a class="dropdown-item" href="project-plan.html">Project Plan</a>
                         </div>
                     </div>
                 </div>
@@ -54,13 +54,18 @@
             <h4 class="card-header text-center bold">Communications and Meetings</h4>
             <div class="card-body">
                 <ul class="card-body pl-4">
-                    <li>Active participation on discussions of project matter on the platform of Messenger for this group</li>
+                    <li>Active participation on discussions of project matter on the platform of Messenger for this
+                        group</li>
                     <li>All issues related to the course or project raised in group meetings and on messaging channels,
                         must be addressed no later than 24 hours after from the time that the issue was brought up</li>
-                    <li>Meeting times will be held during Wednesday 4 - 6 PM  on a weekly basis to discuss relevant matters on the project. 
-                        All members must show up to the meetings, given that there are no other pressing situations are risen</li>
-                    <li>Meetings will be held using the Messenger calling functionality where individuals can share work and speak about their accomplishments each week</li>
-                    <li>Preparation of the meeting must be done according to what was discussing during the meeting of the previous week, with the exception of meeting number 1</li>
+                    <li>Meeting times will be held during Wednesday 4 - 6 PM on a weekly basis to discuss relevant
+                        matters on the project.
+                        All members must show up to the meetings, given that there are no other pressing situations are
+                        risen</li>
+                    <li>Meetings will be held using the Messenger calling functionality where individuals can share work
+                        and speak about their accomplishments each week</li>
+                    <li>Preparation of the meeting must be done according to what was discussing during the meeting of
+                        the previous week, with the exception of meeting number 1</li>
                 </ul>
             </div>
         </article>
@@ -71,11 +76,14 @@
             <h4 class="card-header text-center bold">Division of Work</h4>
             <div class="card-body">
                 <ul class="card-body pl-4">
-                    <li>Work will be split according to those who feel most comfortable with the task, 
-                        while also giving the opportunity for the those who do not know how to complete the task to learn tools of the trade from experienced members</li>
-                    <li>In the situation that there is a large amount of work to be done, work will be delegated equally among members, 
-                        and those who finish their task will be asked to help other members in completing their task</li>
-                    
+                    <li>Work will be split according to those who feel most comfortable with the task,
+                        while also giving the opportunity for the those who do not know how to complete the task to
+                        learn tools of the trade from experienced members</li>
+                    <li>In the situation that there is a large amount of work to be done, work will be delegated equally
+                        among members,
+                        and those who finish their task will be asked to help other members in completing their task
+                    </li>
+
                 </ul>
             </div>
         </article>
@@ -86,8 +94,10 @@
             <h4 class="card-header text-center bold">Submitting Work</h4>
             <div class="card-body">
                 <ul class="card-body pl-4">
-                    <li>Submissions will be reviewed by at least 2 members of the team, depending on the availability (ideally all members should review) in the forms of pull requests</li>
-                    <li>Work will be submitted consistently (i.e. multiple commits every 2-3 days) over the period upto the due date</li>
+                    <li>Submissions will be reviewed by at least 2 members of the team, depending on the availability
+                        (ideally all members should review) in the forms of pull requests</li>
+                    <li>Work will be submitted consistently (i.e. multiple commits every 2-3 days) over the period upto
+                        the due date</li>
                     <li>All members will submit the work they chose to take up in the form of pull requests</li>
                 </ul>
             </div>
@@ -99,11 +109,17 @@
             <h4 class="card-header text-center bold">Contingency Plan</h4>
             <div class="card-body">
                 <ul class="card-body pl-4">
-                    <li>If team member is sick for a significant period of time or a team member drops out, their work will be taken up by those most comfortable with finishing it before deadline</li>
+                    <li>If team member is sick for a significant period of time or a team member drops out, their work
+                        will be taken up by those most comfortable with finishing it before deadline</li>
                     <li>Academic dishonesty will not be tolerated under any circumstances</li>
-                    <li>If a member misses multiple meetings, no further escalation of the situation will be made, and will be reported to the professor or TA</li>
+                    <li>If a member misses multiple meetings, no further escalation of the situation will be made, and
+                        will be reported to the professor or TA</li>
                 </ul>
             </div>
         </article>
     </div>
+    
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="js/agency.js"></script>
 </body>
