--- a/project-plan.html
+++ b/project-plan.html
@@ -22,6 +22,7 @@
             </button>
             <div class="collapse navbar-collapse text-center" id="navbarTogglerDemo01">
                 <div class="navbar-nav ml-auto text-uppercase">
+                    <a class="nav-item nav-link" href="index.html">Home</a>
                     <a class="nav-item nav-link" href="about-us.html">About Us</a>
                     <a class="nav-item nav-link" href="team-expectations.html">Team Expectations</a>
                     <div class="nav-item dropdown">
