Add user story page nav link to the header

--- a/about-us.html
+++ b/about-us.html
@@ -25,7 +25,7 @@
                 <a class="nav-item nav-link" href="about-us.html">About Us</a>
                 <a class="nav-item nav-link" href="team-expectations.html">Team Expectations</a>
                 <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="user_stories_personas.html" id="navbarDropdown" role="button"
                         data-toggle="dropdown">
                         Deliverables
                     </a>
