--- a/user_stories_personas.html
+++ b/user_stories_personas.html
@@ -13,26 +13,25 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse container" id="navbarTogglerDemo01">
             <a class="navbar-brand" href="/">
-                <img src="assets/team-logo.png" alt="team-logo">
+                <img src="assets/team-logo.png" alt="team-logo" />
             </a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                data-target="#navbarTogglerDemo01">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse text-center" id="navbarTogglerDemo01">
-                <div class="navbar-nav ml-auto text-uppercase">
-                    <a class="nav-item nav-link" href="about-us.html">About Us</a>
-                    <a class="nav-item nav-link" href="#">Team Expectations</a>
-                    <div class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown">
-                            Deliverables
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" href="user_stories_personas.html">Personas & User Stories</a>
-                        </div>
+            <div class="navbar-nav ml-auto text-uppercase">
+                <a class="nav-item nav-link" href="index.html">Home</a>
+                <a class="nav-item nav-link" href="about-us.html">About Us</a>
+                <a class="nav-item nav-link" href="team-expectations.html">Team Expectations</a>
+                <div class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown">
+                        Deliverables
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right">
+                        <a class="dropdown-item" href="user_stories_personas.html">Personas & User Stories</a>
+                        <a class="dropdown-item" href="project-plan.html">Project Plan</a>
                     </div>
                 </div>
             </div>
