--- a/project-plan.html
+++ b/project-plan.html
@@ -31,7 +31,7 @@
                             Deliverables
                         </a>
                         <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" href="#">Personas & User Stories</a>
+                            <a class="dropdown-item" href="user_stories_personas.html">Personas & User Stories</a>
                             <a class="dropdown-item" href="project-plan.html">Project Plan</a>
                         </div>
                     </div>
