Change the nav links

--- a/about-us.html
+++ b/about-us.html
@@ -25,12 +25,12 @@
                 <a class="nav-item nav-link" href="about-us.html">About Us</a>
                 <a class="nav-item nav-link" href="team-expectations.html">Team Expectations</a>
                 <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="user_stories_personas.html" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown">
                         Deliverables
                     </a>
                     <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#">Personas & User Stories</a>
+                        <a class="dropdown-item" href="user_stories_personas.html">Personas & User Stories</a>
                         <a class="dropdown-item" href="project-plan.html">Project Plan</a>
                     </div>
                 </div>
